[metadata]
name = midas
version = 0.0.1
author = Luciano Ambrosini
author_email = luciano.ambrosini@outlook.com
description = modules for Ambrosinus-Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = url='https://github.com/lucianoambrosini/Ambrosinus_Scripts/midas-atoolkit',
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True